coletando em uma lista